--- a/router/views/index.html
+++ b/router/views/index.html
@@ -9,7 +9,33 @@
     <title>Document</title>
 </head>
 <body>
-    html띄우기
-    <button type="button" class="btn btn-primary">Primary</button>
+    <div class="container">
+        <div class="row">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+        <div class="row">
+        </div>
+        <div class="row">
+            <div class="col-sm">
+            One of three columns
+            </div>
+            <div class="col-sm">
+            One of three columns
+            </div>
+        </div>
+    </div>
 </body>
 </html>
