--- a/router/views/index.html
+++ b/router/views/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="row">
-            <img style="width:100%" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/youtube_main5.jpg">
+            <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/youtube_main5.jpg">
         </div>
         <div class="row">
             <div class="col-sm">
