--- a/router/views/index.html
+++ b/router/views/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <ul class="nav justify-content-center">
+            <ul class="nav justify-content-center navbar-fixed-top">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Active</a>
                 </li>
