--- a/router/views/index.html
+++ b/router/views/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nav navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
         <a class="nav-link active" href="#">Active</a>
         <a class="nav-link" href="#">Link</a>
         <a class="nav-link" href="#">Link</a>
