--- a/router/views/index.html
+++ b/router/views/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <nav class="navbar fixed-top">
-        <a class="nav-link active" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="navbar-brand" href="#">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/logo_nav.png" width="100%" height="auto" alt="로고">
+        </a>
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
 </body>
