--- a/router/views/index.html
+++ b/router/views/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar fixed-top">
         <a class="navbar-brand" href="#">
-            <img src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/logo_nav.png" width="100%" height="auto" alt="로고">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/logo_nav.png" width="150" height="auto" alt="로고">
         </a>
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
