--- a/router/views/index.html
+++ b/router/views/index.html
@@ -15,5 +15,13 @@
         </a>
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
+    <div class="container">
+        <div class="row">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="auto" alt="">
+        </div>
+        <div class="row">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="auto" alt="">
+        </div>
+    </div>
 </body>
 </html>
