--- a/router/views/index.html
+++ b/router/views/index.html
@@ -17,10 +17,10 @@
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
     <div class="container">
         <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="auto" alt="">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="318" alt="뷰티포스터">
         </div>
         <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="auto" alt="">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" width="450" height="318" alt="KPOP포스터">
         </div>
     </div>
 </body>
