--- a/router/views/index.html
+++ b/router/views/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <nav class="navbar fixed-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/logo_nav.png" width="150" height="auto" alt="로고">
         </a>
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
     <div class="container">
         <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" width="450" height="318" alt="뷰티포스터">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
         </div>
         <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" width="450" height="318" alt="KPOP포스터">
+            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
         </div>
     </div>
 </body>
