--- a/router/views/index.html
+++ b/router/views/index.html
@@ -16,12 +16,20 @@
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
     <div class="container">
+        <!-- <div class="row">
+            
+        </div> -->
         <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
+            <div class="col">
+                <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
+            </div>
+            <div class="col">
+                <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
+            </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
