--- a/router/views/index.html
+++ b/router/views/index.html
@@ -16,9 +16,10 @@
     </nav>
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
     <div class="container">
-        <!-- <div class="row">
-            
-        </div> -->
+        <div class="row">
+            <p class="info">모두의 경험을 찾고있습니다!</p>
+            <p class="info">아래 공모전확인해서 상금도 받아가세요!</p>
+        </div>
         <div class="row">
             <div class="col">
                 <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
