--- a/router/views/index.html
+++ b/router/views/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>올리뷰 AllREVIEW</title>
 </head>
 <body>
     <nav class="navbar fixed-top">
@@ -17,20 +17,20 @@
     <img style="width:100%; height:auto;" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/web_main.jpg">
     <div class="container">
         <div class="row">
-            <p class="info">모두의 경험을 찾고있습니다!</p>
-            <p class="info">아래 공모전확인해서 상금도 받아가세요!</p>
+           <!-- 이미지 -->
         </div>
         <div class="row">
             <div class="col">
-                <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
+                <a href="https://www.youtube.com/channel/UCWKJKnXGOTbGMFZdkziF7qg?view_as=subscriber">
+                    <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
+                </a>
             </div>
             <div class="col">
-                <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
+                <a href="https://www.youtube.com/channel/UCxOBfZgGzQQ5H21R7Y6_T2g?view_as=subscriber">
+                    <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
+                </a>
             </div>
         </div>
-        <!-- <div class="row">
-            <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
-        </div> -->
     </div>
 </body>
 </html>
