--- a/router/views/index.html
+++ b/router/views/index.html
@@ -21,12 +21,12 @@
         </div>
         <div class="row">
             <div class="col">
-                <a href="https://www.youtube.com/channel/UCWKJKnXGOTbGMFZdkziF7qg?view_as=subscriber">
+                <a href="https://www.youtube.com/channel/UCWKJKnXGOTbGMFZdkziF7qg?view_as=subscriber" target="_blank">
                     <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/beauty_contest.jpg" alt="뷰티포스터">
                 </a>
             </div>
             <div class="col">
-                <a href="https://www.youtube.com/channel/UCxOBfZgGzQQ5H21R7Y6_T2g?view_as=subscriber">
+                <a href="https://www.youtube.com/channel/UCxOBfZgGzQQ5H21R7Y6_T2g?view_as=subscriber" target="_blank">
                     <img class="poster" src="https://s3.ap-northeast-2.amazonaws.com/allrvw/mainTestImg/KPOP_contest.png" alt="KPOP포스터">
                 </a>
             </div>
